--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.1.11",
-    "@strapi/plugin-users-permissions": "4.1.11",
+    "@strapi/plugin-graphql": "^4.1.11",
     "@strapi/plugin-i18n": "4.1.11",
-    "pg": "8.6.0"
+    "@strapi/plugin-users-permissions": "4.1.11",
+    "@strapi/provider-upload-cloudinary": "^4.1.11",
+    "@strapi/strapi": "4.1.11",
+    "pg": "8.6.0",
+    "strapi-provider-email-smtp": "^1.0.3"
   },
   "author": {
     "name": "A Strapi developer"
